# fantasia

./: .gitignore  API.md  LICENSE  README.md  package.json
client/: Cargo.toml
client/src/: main.rs  proto.rs
client/src/app/: mod.rs  state.rs  update.rs
client/src/connect/: mod.rs  streaming.rs  transport.rs  unary.rs
client/src/rpc/: events.rs  mod.rs  orchestrator.rs
client/src/tui/: mod.rs
client/src/tui/widgets/: agent_detail.rs  chat.rs  input.rs  mod.rs  plan.rs  status_bar.rs
core/: package.json  tsconfig.json
core/src/: errors.ts  index.ts  logger.ts  orchestrator.ts  types.ts
core/src/agents/: base-agent.ts  broomstick.ts  chernabog.ts  imagineer.ts  jacchus.ts  mickey.ts  yen-sid.ts
core/src/context/: context-store.ts
core/src/events/: event-emitter.ts
core/src/memory/: memory-manager.ts  memory-store.ts
core/src/messaging/: message-bus.ts
core/src/milestones/: milestone-tracker.ts
core/src/notifications/: notification-bus.ts
core/src/sdk/: sdk-adapter.ts  session-pool.ts
core/src/task/: task-queue.ts  task.ts
core/src/tools/: fantasia-tools.ts  milestone-tools.ts
core/test/fixtures/: mock-sdk.ts
core/test/integration/: agent-communication.test.ts  error-recovery.test.ts  full-workflow.test.ts
core/test/unit/: broomstick.test.ts  chernabog.test.ts  imagineer.test.ts  memory-manager.test.ts  memory-store.test.ts  message-bus.test.ts  mickey.test.ts  (+3 more)
server/: buf.gen.yaml  package.json
server/src/: bridge.ts  convert.ts  errors.ts  index.ts  logger.ts  server.ts
server/test/: convert.test.ts  logger.test.ts
(+14 files in other folders)
